Fixed: wflow-core - DX X-Admin Theme - Remove small gap between first tab and menus. @7.0-SNAPSHOT Fixed: wflow-core - DX X-Admin Theme - Content <ul> and <ol> style is mess up. @7.0-SNAPSHOT Fixed: wflow-core - DX X-Admin Theme - Header tag style in a form is mess up. @7.0-SNAPSHOT Fixed: wflow-core - DX X-Admin Theme - Quick edit link to userview builder is missing. @7.0-SNAPSHOT Fixed: wflow-core - DX X-Admin Theme - Menu font size is inconsistent when label has icon appended on behind. @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/xadmin/css/custom.css
+++ b/wflow-consoleweb/src/main/webapp/xadmin/css/custom.css
@@ -362,3 +362,6 @@ footer {
     text-align: center;
     padding: 10px;
 }
+#page > .quickEdit {
+    z-index: 10;
+}
